# Grasping-cell-brief-showcase

./: README.md
Computer_Vision_Docker/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
folder_cv/: depth.sh  frame_camera.sh  pose.sh  yolo_repo.sh  yolo_seg.sh
folder_cv_Grasping/: aligh.sh  depth.sh  frames_2026-01-31_18.21.24.gv  mount_camera.sh  profun.sh  quick_pose_test.py  tfpose.py
meshes/: Base_with_Camera_center.STL
ur_moveit_tools/: CMakeLists.txt  package.xml
ur_moveit_tools/src/: cam_end_pose.cpp  end_pose.cpp  joint_space_trajectory.cpp
urdf/: camera.urdf.xacro
